fix lỗi gap in .icon-footer

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -652,25 +652,23 @@ line-height: normal;
     display: flex;
     justify-content: space-evenly;
    margin-top: 40px;
-   margin-left: -15px;
 }
 .footer .icon-footer img{
+    background: #f9f9f9;
     border-radius: 3px;
     width: 28px;
     height: 28px;
     
 }
-.footer .icon-footer img:nth-child(2),img:nth-child(3){
+.footer .icon-footer img+img{
     margin-left: 17px;
 }
-/* .footer .icon-footer img:nth-child(3){
-    margin-left: 17px;
-} */
-
-
 .footer .icon-footer img:hover{
     background-color: #523e3e;
 }
+/* .footer .icon-footer img:first-child{
+    margin-left: 0;
+} */
 
 
 .footer .row .column .desc{
